<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.FaleconoscoFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">






            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_nome"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_email"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toBottomOf="@+id/input_nome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_assunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_Assunto"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toBottomOf="@+id/input_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_Mensagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_Mensagem"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toBottomOf="@+id/input_assunto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="NotSibling">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_Enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#021B95"
                android:gravity="center"
                android:text="@string/input_Enviar"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_Mensagem" />

            <TextView
                android:id="@+id/tele"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_Enviar"
                android:text="@string/input_Telefone"
                android:gravity="center"
                android:textSize="12sp"
                ></TextView>







        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>


